--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -42,7 +42,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Email Address or Username: @*@Html.LabelFor(x => x.UserName)*@
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "UserName1", placeholder = "someone@domain.com" })
+                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "UserName1", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
                                         <br />
@@ -92,7 +92,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "UserName2", placeholder = "user_123" })
+                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "UserName2", placeholder = "user_123" })
                                             </div>
                                         </div>
                                         <br />
