--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -53,7 +53,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "user_123" })
+                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "UserName", placeholder = "user_123" })
                                             </div>
                                         </div>
                                         <br />
