--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -39,7 +39,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Email Address or Username: @*@Html.LabelFor(x => x.UserName)*@
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "someone@domain.com" })
+                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "UserName", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
                                         <br />
