--- a/devinmajordotcom/Views/Home/_NewBannerLink.cshtml
+++ b/devinmajordotcom/Views/Home/_NewBannerLink.cshtml
@@ -58,7 +58,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input class="toggler check-box" data-val="true" data-val-required="The IsDefault field is required." id="LandingPageBannerLinks_{{newID}}__IsDefault" name="LandingPageBannerLinks[{{newID}}].IsDefault" type="checkbox" value="true"><input name="LandingPageBannerLinks[{{newID}}].IsDefault" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label for="LandingPageBannerLinks_{{newID}}__IsDefault" style="font-weight: normal; margin-bottom: 0px;">Is the Default Link?</label>
                     </div>
@@ -69,7 +69,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input checked="checked" class="toggler check-box" data-val="true" data-val-required="The IsPublic field is required." id="LandingPageBannerLinks_{{newID}}__IsPublic" name="LandingPageBannerLinks[{{newID}}].IsPublic" type="checkbox" value="true"><input name="LandingPageBannerLinks[{{newID}}].IsPublic" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label for="LandingPageBannerLinks_{{newID}}__IsPublic" style="font-weight: normal; margin-bottom: 0px;">Is Link Public?</label>
                     </div>
@@ -80,7 +80,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input checked="checked" class="toggler check-box" data-val="true" data-val-required="The Is Link Enabled? field is required." id="LandingPageBannerLinks_{{newID}}__IsEnabled" name="LandingPageBannerLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input name="LandingPageBannerLinks[{{newID}}].IsEnabled" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label for="LandingPageBannerLinks_{{newID}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
                     </div>
