--- a/devinmajordotcom/Views/Home/_NewSiteLink.cshtml
+++ b/devinmajordotcom/Views/Home/_NewSiteLink.cshtml
@@ -59,7 +59,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input checked="checked" class="toggler check-box" data-val="true" data-val-required="The IsPublic field is required." id="LandingPageApplicationLinks_{{newID}}__IsPublic" name="LandingPageApplicationLinks[{{newID}}].IsPublic" type="checkbox" value="true"><input name="LandingPageApplicationLinks[{{newID}}].IsPublic" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label for="LandingPageApplicationLinks_{{newID}}__IsPublic" style="font-weight: normal; margin-bottom: 0px;">Is Link Public?</label>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input checked="checked" class="toggler check-box" data-val="true" data-val-required="The Is Link Enabled? field is required." id="LandingPageApplicationLinks_{{newID}}__IsEnabled" name="LandingPageApplicationLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input name="LandingPageApplicationLinks[{{newID}}].IsEnabled" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label for="LandingPageApplicationLinks_{{newID}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
                     </div>
