--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -174,7 +174,7 @@
                                             <div class="checkbox-inline">
                                                 <label class="switch">
                                                     @Html.EditorFor(o => o.SidebarLinks[count].IsDefault, new { htmlAttributes = new { @class = "toggler" } })
-                                                    <div class="slider round"></div>
+                                                    <div class="toggleslider round"></div>
                                                 </label>
                                                 @Html.LabelFor(o => o.SidebarLinks[count].IsDefault, "Is the Default Link?", new { @style = "font-weight: normal; margin-bottom: 0px;" })
                                             </div>
@@ -185,7 +185,7 @@
                                             <div class="checkbox-inline">
                                                 <label class="switch">
                                                     @Html.EditorFor(o => o.SidebarLinks[count].IsPublic, new { htmlAttributes = new { @class = "toggler" } })
-                                                    <div class="slider round"></div>
+                                                    <div class="toggleslider round"></div>
                                                 </label>
                                                 @Html.LabelFor(o => o.SidebarLinks[count].IsPublic, "Is Link Public?", new { @style = "font-weight: normal; margin-bottom: 0px;" })
                                             </div>
@@ -196,7 +196,7 @@
                                             <div class="checkbox-inline">
                                                 <label class="switch">
                                                     @Html.EditorFor(o => o.SidebarLinks[count].IsEnabled, new { htmlAttributes = new { @class = "toggler" } })
-                                                    <div class="slider round"></div>
+                                                    <div class="toggleslider round"></div>
                                                 </label>
                                                 @Html.LabelFor(o => o.SidebarLinks[count].IsEnabled, "Is Link Enabled?", new { @style = "font-weight: normal; margin-bottom: 0px;" })
                                             </div>
