--- a/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
@@ -45,7 +45,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsDefault field is required." id="SidebarLinks_{{newID}}__IsDefault" name="SidebarLinks[{{newID}}].IsDefault" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsDefault" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsDefault" style="font-weight: normal; margin-bottom: 0px;">Is the Default Link?</label>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsPublic field is required." id="SidebarLinks_{{newID}}__IsPublic" name="SidebarLinks[{{newID}}].IsPublic" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsPublic" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsPublic" style="font-weight: normal; margin-bottom: 0px;">Is Link Public?</label>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             <input checked="checked" class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsEnabled field is required." id="SidebarLinks_{{newID}}__IsEnabled" name="SidebarLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsEnabled" type="hidden" value="false">
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
                     </div>
