--- a/devinmajordotcom/Views/MyHome/_EditFavoriteForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_EditFavoriteForm.cshtml
@@ -94,7 +94,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.IsEnabled, new {htmlAttributes = new {@class = "toggler"}})
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
