--- a/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
@@ -123,7 +123,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.IsEditable, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBanner, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowDateAndTime, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowWeather, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBookmarks, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBlog, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
