--- a/devinmajordotcom/Views/MyHome/_MasterSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_MasterSettingsForm.cshtml
@@ -125,7 +125,7 @@
                         <div class="checkbox-inline">
                             <label class="switch">
                                 @Html.EditorFor(x => x.ShowVisitorsAdminHome, new { htmlAttributes = new { @class = "toggler" } })
-                                <div class="slider round"></div>
+                                <div class="toggleslider round"></div>
                             </label>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.IsEditable, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBanner, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowDateAndTime, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowWeather, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBookmarks, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                     <div class="checkbox-inline">
                         <label class="switch">
                             @Html.EditorFor(x => x.ShowBlog, new { htmlAttributes = new { @class = "toggler" } })
-                            <div class="slider round"></div>
+                            <div class="toggleslider round"></div>
                         </label>
                     </div>
                 </div>
