--- a/devinmajordotcom/Views/Portfolio/_NewLanguageSkill.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_NewLanguageSkill.cshtml
@@ -6,6 +6,10 @@
             <input class="form-control" data-val="true" data-val-length="Language Name cannot be longer than 100 characters." data-val-length-max="100" data-val-required="The Language Name * :  field is required." id="LanguageSkills_{{newID}}__LanguageName" name="LanguageSkills[{{newID}}].LanguageName" type="text" value="">
             <h5>Language Specifics (if programming language or applicable)</h5>
             <textarea class="form-control" cols="20" data-val="true" data-val-length="Language Specifics cannot be longer than 500 characters." data-val-length-max="500" id="LanguageSkills_{{newID}}__LanguageSpecifics" name="LanguageSkills[{{newID}}].LanguageSpecifics" rows="2"></textarea>
+            <h5>Language Capability (if programming language or applicable)</h5>
+            
+            <input class="customSlider untouched" data-slider-max="100" data-slider-min="0" data-slider-step="1" data-slider-value="50" data-val="true" data-val-number="The field LanguageCapabilityPercentage must be a number." id="LanguageSkills_{{newID}}__LanguageCapabilityPercentage" name="LanguageSkills[{{newID}}].LanguageCapabilityPercentage" type="text" value="50" data-value="50" style="display: none;">
+            
             <a class="btn btn-danger deleteSkillGroup deleteSkillLink" data-ajax="true" data-ajax-failure="ManagePortfolioSkillsAjaxFailure" data-ajax-method="GET" data-ajax-success="RemoveSkill('.languageSkill_{{newID}}', 'languageSkill')" data-content="<span class='fa fa-trash'></span>&amp;nbsp;Remove Language" href="/Portfolio/RemoveLanguageSkill/{{newLinkCounter}}" id="deleteLangugeSkillLink_{{newLinkCounter}}" style="float:right;"><span class="fa fa-trash"></span>&nbsp;Remove Language</a>
             <br>
         </div>
