--- a/devinmajordotcom/Views/MyHome/_BlogPostComments.cshtml
+++ b/devinmajordotcom/Views/MyHome/_BlogPostComments.cshtml
@@ -9,7 +9,8 @@
         <div class="media mb-4 comment">
             @{
                 var linkText = "<span class='fa fa-trash'></span>";
-                var actionLink = Ajax.ActionLink("REPLACE", "RemoveCommentById", "MyHome", new { ID = comment.CommentID }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "UpdateBlogPosts();", OnFailure = "SettingsUpdateFailure" }, new { data_content = linkText, @id = "deleteLink_" + Model.BlogPostID, @class = "btn btn-danger deleteGroup deleteFavoriteLink", @style = "float:right;" });
+                var actionLink = Ajax.ActionLink("REPLACE", "RemoveBannerLink", "Home", new { ID = Model[count].CommentID }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "RemoveComment('#deleteBannerLink_" + Model[count].CommentID + "')", OnFailure = "ManageCommentsAjaxFailure" }, new { data_content = linkText, @id = "deleteBannerLink_" + Model[count].CommentID, @class = "btn btn-danger deleteGroup deleteBannerLink", @style = "float:right;" });
+                @Html.Raw(actionLink.ToHtmlString().Replace("REPLACE", linkText))
             }
             <div class="media-body">
                 <h5 class="mt-0 blogHoverItem">
