--- a/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
+++ b/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
@@ -49,7 +49,7 @@
                     <small><i class="fa fa-clock-o"></i><span class="datetime">@post.CreatedOn</span></small>
                     <h3>
                         @{
-                            var link1 = Html.ActionLink("REPLACE", "BlogPost", "MyHome", new { ID = post.BlogPostID }).ToHtmlString();
+                            var link1 = Html.ActionLink("REPLACE", "BlogPost", new { ID = post.BlogPostID }).ToHtmlString();
                             var cleanLink1 = link1.Replace("REPLACE", post.PostTitle);
                         }
 
