add new project is functional but event handlers broke

--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -49,3 +49,4 @@
 @Html.Partial("../Portfolio/_NewLanguageSkill")
 @Html.Partial("../Portfolio/_NewContactLink")
 @Html.Partial("../Portfolio/_NewWorkSkill")
+@Html.Partial("../Portfolio/_NewProject")
