--- a/devinmajordotcom/Views/Home/_Apps.cshtml
+++ b/devinmajordotcom/Views/Home/_Apps.cshtml
@@ -6,7 +6,7 @@
 
 <div style="display:none;" class="inner cover" id="home">
 
-    <h1 class="cover-heading">@Model.Config.AppsTitle</h1>
+    <h1 class="cover-heading"><strong>@Model.Config.AppsTitle</strong></h1>
     
     @if (config != null)
     {
