--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -559,7 +559,7 @@
                                         @Html.LabelFor(x => x.PortfolioProjects[count].ProjectDescription, new { @style = "font-weight:normal;position:relative;" })
                                     </div>
                                     <div class="col-sm-12 text-center">
-                                        @Html.TextAreaFor(x => x.PortfolioProjects[count].ProjectDescription, new { @class = "tinymce", rows = "4", placeholder = "Project Description" })
+                                        @Html.TextAreaFor(x => x.PortfolioProjects[count].ProjectDescription, new { @class = "form-control", rows = "4", placeholder = "Project Description (EX: This project took 6 months and involved several people...)" })
                                     </div>
                                 </div>
                                     
