--- a/devinmajordotcom/Views/Portfolio/_NewProject.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_NewProject.cshtml
@@ -32,7 +32,7 @@
                 <label for="PortfolioProjects_{{newID}}__ProjectDescription" style="font-weight:normal;position:relative;">Project Description : </label>
             </div>
             <div class="col-sm-12 text-center">
-                <textarea id="PortfolioProjects_{{newID}}__ProjectDescription" name="PortfolioProjects[{{newID}}].ProjectDescription" class="tinymce" rows="4" placeholder="Project Description"></textarea>
+                <textarea id="PortfolioProjects_{{newID}}__ProjectDescription" name="PortfolioProjects[{{newID}}].ProjectDescription" class="form-control" rows="4" placeholder="Project Description (EX: This project took 6 months and involved several people...)"></textarea>
             </div>
         </div>
 
