email confirmation works. need spinners and to stop spinners, as well as bootsnack

--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -62,6 +62,9 @@
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
+                                            <div class="spinner" style="display: none;">
+                                                <span class="spinner-rotate"></span>
+                                            </div>
                                         </div>
                                         <br />
                                         <button type="submit" class="form-control formSubmit" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
@@ -114,6 +117,9 @@
                                             </div>
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
+                                            </div>
+                                            <div class="spinner" style="display: none;">
+                                                <span class="spinner-rotate"></span>
                                             </div>
                                         </div>
                                         <br />
